--- a/authorizeSever/src/main/resources/templates/sign-up.html
+++ b/authorizeSever/src/main/resources/templates/sign-up.html
@@ -7,17 +7,18 @@
 <body>
     <form action="/sign-up/oauth", method="post">
         <label>아이디</label>
-        <input type="email" name="id" placeholder="Email" required>
-        <p class="email" type="hidden">이메일 중복 확인을 해주세요</p>
+        <input type="text" name="id" placeholder="Email" required>
         <label>패스워드</label>
         <input type="password"  name="password" placeholder="Password" required> <br/>
+        <label>이메일</label>
+        <input type="email" th:if="${email == null}" th:value="${email == null} ? '' : ${email}" name="email" placeholder="Email" required>
         <label>닉네임</label>
         <input type="text"  name="nick_name" placeholder="닉네임" required><br/>
         <label>주소</label>
         <input type="text"  name="address" placeholder="주소"><br/>
         <label>휴대폰 번호</label>
         <input type="tel"  name="phone_number" placeholder="휴대폰 번호"><br/>
-        <input name="sns_principal" th:value="${principal}" type="hidden">
+        <input name="sns_principal" th:value="${principal}">
         <button type="submit">Sign up</button>
     </form>
 </body>
