socialMemberInfo 테이블 추가 - sns 로그인 후 회원 가입시 sns provider 및 principal로  socialMemberInfo에  insert 및 sns 로그인시 이미 가입된 회원이 확인 되면 해당 회원에 socialMemberInfo 테이블에 insert

--- a/authorizeSever/src/main/resources/templates/sign-up.html
+++ b/authorizeSever/src/main/resources/templates/sign-up.html
@@ -152,7 +152,8 @@
                     <label for="phone_number">핸드폰 번호</label>
                 </div>
             </div>
-
+            <input name="provider_type" th:value="${providerType}" hidden="true"/>
+            <input name="principal" th:value="${principal}" hidden="true"/>
             <div class="row">
                 <div class="input-field col s12">
                     <button type="submit" class="btn waves-effect waves-light col s12">회원 가입</button>
@@ -247,7 +248,6 @@ $( document ).ready(function() {
             url: '/duplication_check/' + attribute + '/' + value,
             async: false,
             success: function(data) {
-                console.log('dupcheck response' + data)
                 result = data;
             }
         });
