--- a/authorizeSever/src/main/resources/templates/sign-up.html
+++ b/authorizeSever/src/main/resources/templates/sign-up.html
@@ -122,7 +122,7 @@
                     <!-- <i class="mdi-action-lock-outline prefix"></i> -->
                     <i class="material-icons prefix">vpn_key</i>
                     <input id="password_a" name="cpassword" type="password" />
-                    <label for="password_a">패스워드를 한번 더 입력해 주세요</label>
+                    <label for="password_a">패스워드 확인</label>
                 </div>
             </div>
 
@@ -227,7 +227,7 @@ $( document ).ready(function() {
             nickname: {
                 required: "닉네임을 입력하세요",
                 minlength: "닉네임은 두 글자 이상 입니다",
-                isDuplication: "중복된 이메일입니다. 다른 닉네임을 입력해 주세요"
+                isDuplication: "중복된 닉네임입니다. 다른 닉네임을 입력해 주세요"
             }
         },
         errorElement: 'div',
