--- a/authorizeSever/src/main/resources/templates/sign-up.html
+++ b/authorizeSever/src/main/resources/templates/sign-up.html
@@ -103,7 +103,7 @@
                 <div class="input-field col s12">
                     <!-- <i class="mdi-social-person-outline prefix"></i> -->
                     <i class="material-icons prefix">email</i>
-                    <input id="email" name="email" type="text" th:value="${email == null} ? '' : ${email}" style="cursor: auto;" />
+                    <input id="email" name="email" type="text" style="cursor: auto;" />
                     <label for="email">이메일</label>
                 </div>
             </div>
